Prevent inner elements of content items from overlapping the modal footer

--- a/src/collection-preferences/content-display/styles.scss
+++ b/src/collection-preferences/content-display/styles.scss
@@ -30,4 +30,6 @@
   position: relative;
   list-style: none;
   padding: 0;
+  /* Prevent inner elements from eventually overlapping the footer */
+  z-index: 0;
 }
